Add registation type 2.0.0